💄 Fix CSS
 Changing header width, 100% instead of 100vw as there is horizontal scrollbar

--- a/client/src/assets/css/components/Header.css
+++ b/client/src/assets/css/components/Header.css
@@ -1,6 +1,6 @@
 .headerStyle {
     height: 8.6rem;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
